create a histogram script

--- a/src/charts/styles/scrolling_graphic_styles.css
+++ b/src/charts/styles/scrolling_graphic_styles.css
@@ -9,6 +9,8 @@
 .scroller-graphic {
     position: -webkit-sticky;
     position: sticky;
+    display: grid;
+    grid-template-columns: .5fr 1fr;
     width: 40vw;
     margin: 0;
     top: 10vh;
