set up card components for dashboard; ;

--- a/src/pages/collections/styles/local_adaptation_styles.css
+++ b/src/pages/collections/styles/local_adaptation_styles.css
@@ -71,4 +71,10 @@ body {
 #arch-chart-group-1 {
     width: 90vw;
     margin-left: 5vw;
+
+}
+
+#dashboard {
+    width: 90vw;
+    margin-left: 5vw;
 }
