--- a/src/components/styles/brush_horizontal_styles.css
+++ b/src/components/styles/brush_horizontal_styles.css
@@ -1,4 +1,8 @@
 .horizontal-brush .selection{
-    stroke: rgb(75, 75, 75);
-    fill: none;
+    stroke: none;
+    fill: rgba(0, 0, 0, 0.15);
+}
+
+.handle{
+    fill: rgb(75, 75, 75);
 }
