--- a/src/Components/Chart/Chart.css
+++ b/src/Components/Chart/Chart.css
@@ -1,30 +1,18 @@
 .Main {
-    background-color:  rgb(238, 236, 234);
+    background-color:  rgb(214, 220, 224);
+    display: grid;
+    grid-gap: 1rem;
+    grid-template-columns: 
+       1fr  1fr  1fr;
+    grid-template-areas:
+      "1    2   param"
+      "3    4   param";
+}
+
+.param-select {
+    grid-area: param;
 }
 
 .wrapper-chart {
-    display: grid;
-    background-color:  rgb(238, 236, 234);
-    grid-template-columns: 1fr 1fr;
-}
-
-.Histogram {
-    margin: 3em;
-    height: 500px;
-    background-color: rgb(255, 255, 255);
-    box-shadow: 0px 1px 10px 1px rgb(143, 143, 143);
-}
-
-.LineChart {
-    margin: 3em;
-    height: 500px;
-    background-color: rgb(255, 255, 255);
-    box-shadow: 0px 1px 10px 1px rgb(143, 143, 143);
-}
-
-.genome {
-    margin: 3em;
-    height: 500px;
-    background-color: rgb(255, 255, 255);
-    box-shadow: 0px 1px 10px 1px rgb(143, 143, 143);
+    grid-area: 1;
 }
